# tacs.api/src/main/java/tp/tacs/api/controllers/AdminApiController.java
@@ -3,10 +3,13 @@ package tp.tacs.api.controllers;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+import tp.tacs.api.daos.PartidaDao;
+import tp.tacs.api.dominio.partida.Partida;
 import tp.tacs.api.model.EstadisticasDeJuegoModel;
 import tp.tacs.api.model.EstadisticasDeUsuarioModel;
 import tp.tacs.api.model.ScoreboardResponse;
 import tp.tacs.api.servicios.ServicioAdmin;
+import tp.tacs.api.servicios.ServicioPartida;
 
 import javax.validation.Valid;
 import java.util.Date;
@@ -16,6 +19,10 @@ public class AdminApiController implements AdminApi {
 
     @Autowired
     private ServicioAdmin servicioAdmin;
+    @Autowired
+    private ServicioPartida servicioPartida;
+    @Autowired
+    private PartidaDao partidaDao;
 
     @Override
     public ResponseEntity<EstadisticasDeJuegoModel> getEstadisticas(@Valid Date fechaInicio, @Valid Date fechaFin) {
@@ -35,5 +42,13 @@ public class AdminApiController implements AdminApi {
         var listaPaginada = servicioAdmin.tablaDePuntos(tamanioPagina, pagina);
         ScoreboardResponse scoreboardResponse = new ScoreboardResponse().scoreboard(listaPaginada);
         return ResponseEntity.ok(scoreboardResponse);
+    }
+
+    @Override public ResponseEntity<Void> pasarTurnoAdmin(Long idPartida) {
+        Partida partida = partidaDao.get(idPartida);
+        if (partida == null)
+            return ResponseEntity.notFound().build();
+        servicioPartida.pasarTurno(partida);
+        return ResponseEntity.ok().build();
     }
 }
