# tacs.api/src/main/resources/swagger/api.yaml
@@ -88,6 +88,22 @@ paths:
                 $ref: '#/components/schemas/NuevoJWTModel'
         401:
           description: Unauthorized
+  /admin/pasarTurno/{idPartida}:
+    post:
+      tags:
+        - Admin
+      summary: Pasar de turno
+      operationId: pasarTurnoAdmin
+      parameters:
+        - in: path
+          name: idPartida
+          schema:
+            type: integer
+            format: int64
+          required: true
+      responses:
+        200:
+          description: Success
   /admin/estadisticas:
     get:
       tags:
